--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 theme: minima
 title: Maestría en Ciencia de datos
-author:
-  name: Julio Waissman
-  email: julio.waissman@unison.mx
+author: Julio Waissman
 titles_from_headings:
   enabled:     true
   strip_title: false
   collections: false
+plugins:
+  - jekyll-titles-from-headings
