--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Maestría en Ciencia de datos
 author: Julio Waissman
 titles_from_headings:
   enabled:     true
-  strip_title: false
+  strip_title: true
   collections: false
 plugins:
   - jekyll-titles-from-headings
